<resources>
    <string name="app_name">Mi Deporte</string>
    <string name="tipo">Tipo:</string>
    <string name="individual">Individual</string>
    <string name="en_pareja">En pareja</string>
    <string name="grupal">Grupal</string>
    <string name="deporte">Deporte:</string>
    <string-array name="individuales">
        <item>Salto de altura</item>
        <item>Atletismo</item>
        <item>Gimnasia</item>
    </string-array>
    <string-array name="parejas">
        <item>Pádel</item>
        <item>Tenis</item>
        <item>Squash</item>
    </string-array>
    <string-array name="grupales">
        <item>Fútbol</item>
        <item>Rugby</item>
        <item>Balonmano</item>
    </string-array>
</resources>