<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbIndividual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/individual" />

        <RadioButton
            android:id="@+id/rbPareja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en_pareja" />

        <RadioButton
            android:id="@+id/rbGrupal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grupal" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deporte" />

    <Spinner
        android:id="@+id/spDeportes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblDeporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amita"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textSize="34sp" />
</LinearLayout>